# ai_inference_object

./: README.md
Inference_CPP/ONNXRuntime/demo_yolox/src/: main.cpp
Inference_CPP/OpenVINO/demo_test/: CMakeLists.txt
Inference_CPP/OpenVINO/demo_test/src/: test_openvino.cpp
Inference_CPP/OpenVINO/demo_yolox/: CMakeLists.txt
Inference_CPP/OpenVINO/demo_yolox/src/: yolox_openvino.cpp
Learn_C/: Clion_Mind.txt
Learn_C/Test_CPP/demo_opencv/: CMakeLists.txt  demo_opencv.cpp
Learn_C/Test_CUDA/: CMakeLists.txt  main.cu
weights/: README.md
